src/objects/ADvendio__Region__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the Geo Targeting Tree, only active marked records will be available.</description>
        <inlineHelpText>In the Geo Targeting Tree, only active marked records will be available.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdTech_ID__c</fullName>
        <label>AdTech-ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Adition_ID__c</fullName>
        <label>Adition-ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Country__c</fullName>
        <label>Country</label>
        <referenceTo>ADvendio__Country__c</referenceTo>
        <relationshipLabel>Regions</relationshipLabel>
        <relationshipName>Regions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Dart_ID__c</fullName>
        <label>Dart-ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Dfp_ID__c</fullName>
        <label>Dfp-ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__LiveRailId__c</fullName>
        <label>LiveRail-ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__NuggAd_ID__c</fullName>
        <label>NuggAd-ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Smart_ID__c</fullName>
        <label>Smart-ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADvendio__X247MediaId__c</fullName>
        <label>24/7 Media ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Surcharge__c</fullName>
        <description>Aufschlag für Targeting</description>
        <inlineHelpText>Aufschlag für Targeting</inlineHelpText>
        <label>Aufschlag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_Zuschlagspflichtig__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wenn diese Checkbox aktiv ist werden vom Adpec die Targeting-Zuschläge aktiviert und an das LineItem übertragen und zu den Zuschlägen hinzugezogen.</description>
        <inlineHelpText>Wenn diese Checkbox aktiv ist werden vom Adpec/Werbemittel/Produkt die Targeting-Zuschläge aktiviert und an das LineItem übertragen und zu den Zuschlägen hinzugezogen.</inlineHelpText>
        <label>Zuschlagspflichtig</label>
        <type>Checkbox</type>
    </fields>
    <label>Region</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>ADvendio__Country__c</columns>
        <columns>SomDig_Surcharge__c</columns>
        <columns>ADvendio__Dfp_ID__c</columns>
        <columns>ADvendio__Smart_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>